--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,10 @@ install:
 # command to run tests
 script:
   - pytest
+notifications:
+  webhooks:
+    urls:
+      - YOUR_WEBHOOK_URL
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
