--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
   - "3.7-dev"  # 3.7 development branch
 # command to install dependencies
 install:
+  - pip install numpy scipy matplotlib
   - python setup.py install
 # command to run tests
 script:
