--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 # command to install dependencies
 install:
   - pip install numpy scipy matplotlib
-  - pip install herdingspikes
+  - pip install .
 # command to run tests
 script:
   - pytest
