--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,2 @@
 [build-system]
-requires = ["setuptools>=42","numpy"]
-build-backend = "setuptools.build_meta"
+requires = ["setuptools", "wheel", "cython", "numpy"]
