--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ notebooks/results/*
 *.hdf5
 *.npy
 tests/results/*
+testing/*
 
 # For macOS
 *.DS_Store
@@ -113,3 +114,8 @@ ENV/
 
 # mypy
 .mypy_cache/
+setup.py.original
+pyproject.toml.save
+setup.py.save
+herdingspikes/detection_localisation/detect.cpp
+herdingspikes/detection_lightning/detect.cpp
